# -language70translatorbot

./: README.md  bot.py  pyproject.toml
